objects/Reward__c.object
<CustomObject>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <formula>IF( TEXT(Status__c)="Active","Yes","No")</formula>
        <label>Active Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelledDate__c</fullName>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpireDate__c</fullName>
        <label>ExpireDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtensionDate__c</fullName>
        <label>Extension Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IssuanceDate__c</fullName>
        <label>IssuanceDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoyaltyId__c</fullName>
        <externalId>true</externalId>
        <label>LoyaltyId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalExpireDate__c</fullName>
        <label>Original Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReasonCode__c</fullName>
        <label>Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Disqualification</fullName>
                </value>
                <value>
                    <fullName>Store Processed Manual Accommodation</fullName>
                </value>
                <value>
                    <fullName>Online Transaction Manual Accommodation</fullName>
                </value>
                <value>
                    <fullName>Customer Distance</fullName>
                </value>
                <value>
                    <fullName>Customer Sick</fullName>
                </value>
                <value>
                    <fullName>Customer Traveling</fullName>
                </value>
                <value>
                    <fullName>Outside of Country</fullName>
                </value>
                <value>
                    <fullName>Did Not Receive Email</fullName>
                </value>
                <value>
                    <fullName>Customer Accommodation</fullName>
                </value>
                <value>
                    <fullName>Unable to Extend</fullName>
                </value>
                <value>
                    <fullName>Gift Card Accommodation</fullName>
                </value>
                <value>
                    <fullName>Adding Store Transaction</fullName>
                </value>
                <value>
                    <fullName>Adding Online Transaction</fullName>
                </value>
                <value>
                    <fullName>Beyond Extension Period</fullName>
                </value>
                <value>
                    <fullName>Signup Bonus Points Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RedeemedDate__c</fullName>
        <label>Redeemed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RewardId__c</fullName>
        <externalId>true</externalId>
        <label>RewardId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RewardType__c</fullName>
        <label>RewardType</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reward_Number__c</fullName>
        <formula>LEFT(SequenceNumber__c,(LEN(SequenceNumber__c) - (LEN(SequenceNumber__c) - FIND(LoyaltyId__c, SequenceNumber__c)+1)))</formula>
        <label>Reward Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <description>Sequence Number and CouponId from Loyalty system</description>
        <externalId>true</externalId>
        <label>SequenceNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Redeemed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>TransactionId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_iscanceled__c</fullName>
        <formula>IF(TEXT(Status__c) = "Cancelled","Yes","No")</formula>
        <label>c_iscanceled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_isexpired__c</fullName>
        <formula>IF(TEXT(Status__c) = "Expired","Yes","No")</formula>
        <label>c_isexpired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_isextended__c</fullName>
        <formula>IF(OriginalExpireDate__c &lt; ExpireDate__c,"Yes","No")</formula>
        <label>c_isextended</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRedeemed__c</fullName>
        <formula>IF(TEXT(Status__c)="Redeemed","Yes","No")</formula>
        <label>isRedeemed</label>
        <type>Text</type>
    </fields>
    <label>Reward</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RewardId__c</columns>
        <columns>Amount__c</columns>
        <columns>c_iscanceled__c</columns>
        <columns>c_isexpired__c</columns>
        <columns>c_isextended__c</columns>
        <columns>CancelledDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>